Add gamepad navigation support, including all official console gamepad models with USB plugs. On Linux, moving the mouse with the left stick may not work correctly because of a bug between Wayland and JavaFX (bug reported to Oracle).